[ADD] docker compose

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MONGODB_URI=mongodb://localhost:27017
 DB_NAME=todo
 COLLECTION_NAME=tasks
 SERVER_PORT= 3000
+MONGO_INITDB_ROOT_USERNAME = root
+MONGO_INITDB_ROOT_PASSWORD = root
