[ADD] mongoDB conn fix and migrations attemps

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,15 @@ services:
       - "${SERVER_PORT}:${SERVER_PORT}"
     environment:
       - SERVER_PORT=${SERVER_PORT}
-      - MONGODB_URI=${MONGODB_URI}
+      - MONGO_URI=${MONGO_URI}
+      - MONGO_PORT=${MONGO_PORT}
+      - MONGO_HOST=mongo
+      - MONGO_USERNAME=${MONGO_USERNAME}
+      - MONGO_PASSWORD=${MONGO_PASSWORD}
       - DB_NAME=${DB_NAME}
       - COLLECTION_NAME=${COLLECTION_NAME}
+      - MONGO_OPTIONS=${MONGO_OPTIONS}
+
     depends_on:
       - mongo
     networks:
@@ -23,8 +29,8 @@ services:
       - "27017:27017"
     environment:
       - MONGO_INITDB_DATABASE=${DB_NAME}
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
     volumes:
       - mongo_data:/data/db
     networks:
@@ -32,3 +38,6 @@ services:
 
 networks:
   todo-net:
+  
+volumes:
+  mongo_data:
