--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-MONGODB_URI=mongodb://localhost:27017
+MONGO_URI=mongodb://
+MONGO_PORT=27017
+MONGO_HOST=localhost
 DB_NAME=todo
-COLLECTION_NAME=tasks
+COLLECTION_NAME=project
 SERVER_PORT= 3000
-MONGO_INITDB_ROOT_USERNAME = root
-MONGO_INITDB_ROOT_PASSWORD = root
+MONGO_USERNAME =root
+MONGO_PASSWORD =root
+MONGO_OPTIONS=?authSource=admin&ssl=false
