--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ COLLECTION_NAME=project
 SERVER_PORT= 3000
 MONGO_USERNAME =root
 MONGO_PASSWORD =root
-MONGO_OPTIONS=?authSource=admin&ssl=false
+MONGO_OPTIONS="?authSource=admin&ssl=false"
