--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -34,7 +34,7 @@ jobs:
     steps:
       - name: Deploy to environment
         run: |
-          if [[${{github.ref}} == 'refs/head/develop']; then
+          if [[${{github.ref}} == 'refs/head/develop']]; then
             echo "Deploying to develop enviroment..."
           elif [[${{github.ref}} == 'refs/heads/staging']]; then
             echo "Deploying to staging enviroment..."
