[ADD] TF setup and files

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,6 +1,7 @@
 name: ci-cd-pipeline
 
 on:
+  workflow_dispatch: #this allows manually pipeline triggering
   push:
     branches:
       - develop
